--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,10 @@ db.password=
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=create-drop
+hibernate.generate_statistics=true
+hibernate.cache.use_second_level_cache=true
+# hibernate.cache.use_query_cache=true
+# hibernate.cache.region.factory_class=net.sf.ehcache.hibernate.EhCacheRegionFactory
 entitymanager.packages.to.scan=org.devshred.hazelcast.persistence
 
 #Hazelcast Setup:
