--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
     <name>HazelShredr</name>
 
     <properties>
-        <spring.version>3.2.4.RELEASE</spring.version>
-        <hazelcast.version>3.1</hazelcast.version>
-        <hibernate.version>4.2.6.Final</hibernate.version>
-        <spring-jpa.version>1.4.1.RELEASE</spring-jpa.version>
+        <spring.version>3.2.6.RELEASE</spring.version>
+        <hazelcast.version>3.1.5</hazelcast.version>
+        <hibernate.version>4.3.0.Final</hibernate.version>
+        <spring-jpa.version>1.4.3.RELEASE</spring-jpa.version>
     </properties>
 
     <!-- SPRING -->
@@ -82,7 +82,7 @@
         <dependency>
             <groupId>commons-dbutils</groupId>
             <artifactId>commons-dbutils</artifactId>
-            <version>1.3</version>
+            <version>1.5</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
@@ -97,17 +97,23 @@
         <dependency>
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache-core</artifactId>
-            <version>2.5.2</version>
+            <version>2.6.6</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-ehcache</artifactId>
             <version>${hibernate.version}</version>
-        </dependency>
+			<exclusions>
+				<exclusion>
+					<groupId>net.sf.ehcache</groupId>
+					<artifactId>ehcache-core</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.3.174</version>
+            <version>1.3.175</version>
         </dependency>
         <dependency>
             <groupId>com.hazelcast</groupId>
@@ -129,12 +135,12 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>14.0.1</version>
+            <version>15.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.1</version>
+            <version>3.2.1</version>
         </dependency>
         <dependency>
             <groupId>commons-collections</groupId>
