--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
     <name>HazelShredr</name>
 
     <properties>
-        <spring.version>3.2.6.RELEASE</spring.version>
-        <hazelcast.version>3.1.5</hazelcast.version>
-        <hibernate.version>4.3.0.Final</hibernate.version>
-        <spring-jpa.version>1.4.3.RELEASE</spring-jpa.version>
+        <spring.version>3.2.8.RELEASE</spring.version>
+        <hazelcast.version>3.2</hazelcast.version>
+        <hibernate.version>4.3.4.Final</hibernate.version>
+        <spring-jpa.version>1.5.1.RELEASE</spring-jpa.version>
     </properties>
 
     <!-- SPRING -->
@@ -97,19 +97,19 @@
         <dependency>
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache-core</artifactId>
-            <version>2.6.6</version>
+            <version>2.6.8</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-ehcache</artifactId>
             <version>${hibernate.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>net.sf.ehcache</groupId>
-					<artifactId>ehcache-core</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
+            <exclusions>
+                <exclusion>
+                    <groupId>net.sf.ehcache</groupId>
+                    <artifactId>ehcache-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -135,17 +135,17 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>15.0</version>
+            <version>16.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.2.1</version>
+            <version>3.3.1</version>
         </dependency>
         <dependency>
-            <groupId>commons-collections</groupId>
-            <artifactId>commons-collections</artifactId>
-            <version>3.2.1</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.0</version>
         </dependency>
 
         <!-- TESTS -->
@@ -176,7 +176,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>1.9.0</version>
+            <version>1.9.5</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
