--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,12 @@
     <name>HazelShredr</name>
 
     <properties>
-        <spring.version>3.2.8.RELEASE</spring.version>
-        <hazelcast.version>3.2</hazelcast.version>
-        <hibernate.version>4.3.4.Final</hibernate.version>
-        <spring-jpa.version>1.5.1.RELEASE</spring-jpa.version>
+        <spring.version>4.1.0.RELEASE</spring.version>
+        <hazelcast.version>3.3</hazelcast.version>
+        <hibernate.version>4.3.6.Final</hibernate.version>
+        <spring-jpa.version>1.7.0.RELEASE</spring-jpa.version>
+        <h2.version>1.4.181</h2.version>
+        <ehcache.version>2.6.9</ehcache.version>
     </properties>
 
     <!-- SPRING -->
@@ -63,7 +65,7 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.0.1</version>
+            <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -97,7 +99,7 @@
         <dependency>
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache-core</artifactId>
-            <version>2.6.8</version>
+            <version>${ehcache.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -113,7 +115,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.3.175</version>
+            <version>${h2.version}</version>
         </dependency>
         <dependency>
             <groupId>com.hazelcast</groupId>
@@ -135,12 +137,12 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>16.0.1</version>
+            <version>18.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.3.1</version>
+            <version>3.3.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
